openshift/openshift-101/01 - application-connectivity/analyser-application/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/marrober/development.git'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"analyzer:latest","namespace":"ocp-101-01"},"fieldPath":"spec.template.spec.containers[?(@.name==\"analyzer\")].image","paused":false}]
  name: analyzer
  namespace: ocp-101-01
  labels:
    app: analyzer
    app.kubernetes.io/component: analyzer
    app.kubernetes.io/instance: analyzer
    app.kubernetes.io/name: analyzer
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 22-minimal-ubi10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analyzer
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: analyzer
        deployment: analyzer
    spec:
      containers:
        - name: analyzer
          image: >-
            image-registry.openshift-image-registry.svc:5000/ocp-101-01/analyzer:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          env: []
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  paused: false
---
kind: Service
apiVersion: v1
metadata:
  name: analyzer
  namespace: ocp-101-01
spec:
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: analyzer
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: analyzer
  namespace: ocp-101-01
spec:
  to:
    kind: Service
    name: analyzer
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
